Incorporate google maps.

--- a/app/views/trees/index.html.erb
+++ b/app/views/trees/index.html.erb
@@ -1,3 +1,6 @@
+
+<%= gmaps4rails(@json) %>
+
 <h1>Listing trees</h1>
 
 <table>
@@ -27,3 +30,4 @@
 <br />
 
 <%= link_to 'New Tree', new_tree_path %>
+
