--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,13 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <%= stylesheet_link_tag 'gmaps4rails' %>
+
 </head>
 <body>
 
 <%= yield %>
+<%= yield :scripts %>
 
 </body>
 </html>
