--- a/app/views/trees/_form.html.erb
+++ b/app/views/trees/_form.html.erb
@@ -19,7 +19,21 @@
     <%= f.label :content %><br />
     <%= f.text_area :content %>
   </div>
+
   <div class="field">
+    <%= f.label :street %><br />
+    <%= f.text_field :street %>
+  </div>
+  <div class="field">
+    <%= f.label :city %><br />
+    <%= f.text_field :city %>
+  </div>
+  <div class="field">
+    <%= f.label :country %><br />
+    <%= f.text_field :country %>
+  </div>
+
+   <div class="field">
     <%= f.label :latitude %><br />
     <%= f.text_field :latitude %>
   </div>
@@ -27,6 +41,7 @@
     <%= f.label :longitude %><br />
     <%= f.text_field :longitude %>
   </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
