Simplify google adress search.

--- a/app/views/trees/_form.html.erb
+++ b/app/views/trees/_form.html.erb
@@ -21,16 +21,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :street %><br />
-    <%= f.text_field :street %>
-  </div>
-  <div class="field">
-    <%= f.label :city %><br />
-    <%= f.text_field :city %>
-  </div>
-  <div class="field">
-    <%= f.label :country %><br />
-    <%= f.text_field :country %>
+    <%= f.label :adress %><br />
+    <%= f.text_field :adress %>
   </div>
 
    <div class="field">
