--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,6 @@
 <table>
   <tr>
     <th>Name</th>
-    <th>Email</th>
     <th>Created At</th>
     <th></th>
     <th></th>
@@ -13,7 +12,6 @@
 <% @users.each do |user| %>
   <tr>
     <td><%= user.name %></td>
-    <td><%= user.email %></td>
     <td><%= user.created_at %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
@@ -25,4 +23,6 @@
 <br />
 
 <%= link_to 'New User', new_user_path %>
+<br />
+<%= link_to 'Trees', trees_path %>
 
